allprojects {
    apply plugin: "java"

    group "ru.craftysoft.util"
    version "1.0.0"

    compileJava.options.encoding = "UTF-8"
    sourceCompatibility = "15"
    targetCompatibility = "15"

    dependencies {
        def daggerVersion = "2.30.1"
        def hibernateValidatorVersion = "7.0.0.Final"
        def lombokVersion = "1.18.16"
        def jacksonVersion = "2.12.0"
        def reactorBomVersion = "2020.0.2"
        compile platform("io.projectreactor:reactor-bom:$reactorBomVersion")
        constraints {
            compile(
                    "org.projectlombok:lombok:$lombokVersion",

                    "com.google.dagger:dagger:$daggerVersion",
                    "com.google.code.findbugs:jsr305:3.0.2",
                    "javax.annotation:javax.annotation-api:1.3.2",

                    "org.slf4j:slf4j-api:1.7.30",
                    "org.slf4j:jul-to-slf4j:1.7.30",
                    "ch.qos.logback:logback-classic:1.2.3",

                    "io.jaegertracing:jaeger-core:1.5.0",
                    "io.jaegertracing:jaeger-thrift:1.5.0",

                    "io.vertx:vertx-pg-client:4.0.0",

                    "com.fasterxml.jackson.core:jackson-core:$jacksonVersion",
                    "com.fasterxml.jackson.module:jackson-module-parameter-names:$jacksonVersion",
                    "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion",
                    "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion",

                    "org.snakeyaml:snakeyaml-engine:2.2.1",

                    "org.apache.kafka:kafka-clients:2.7.0",

                    "javax.validation:validation-api:2.0.1.Final",
                    "org.hibernate.validator:hibernate-validator:$hibernateValidatorVersion",

                    "commons-io:commons-io:2.6",
                    "commons-cli:commons-cli:1.4",
            )
            [
                    "com.google.dagger:dagger-compiler:$daggerVersion",
                    "org.projectlombok:lombok:$lombokVersion",
                    "org.hibernate.validator:hibernate-validator-annotation-processor:$hibernateValidatorVersion",
            ].forEach {
                annotationProcessor(it)
                testAnnotationProcessor(it)
            }
        }
        compileOnly("org.projectlombok:lombok")
        [
                "com.google.dagger:dagger-compiler",
                "org.projectlombok:lombok",
                "org.hibernate.validator:hibernate-validator-annotation-processor",
        ].forEach {
            annotationProcessor(it)
            testAnnotationProcessor(it)
        }

        if (project.name != "common-module") {
            compile project(":util-lib:common-module")
        }

        tasks.withType(JavaCompile) {
            options.compilerArgs += "--enable-preview"
            options.compilerArgs += "-Xlint:preview"
        }

        test {
            useJUnitPlatform {
                excludeEngines "junit-vintage"
            }
            testLogging {
                events "passed", "skipped", "failed"
            }
        }

        repositories {
            mavenCentral()
        }
    }
}
